Updated ability to run recordings